# swarmx

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  Cargo.toml  DESIGNS.md  LICENSE  README.md  SPEC.md  TESTING_WITH_OPENAI.md  biome.json  demo.cast  design-qa.md  index.html  mkdocs.yml  objects.inv  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  sitemap.xml  swarmx.py  test_acp.sh  tsconfig.base.json  vitest.config.ts
.github/workflows/: ci.yml  release.yml
.specify/memory/: constitution.md
.specify/templates/: agent-file-template.md  plan-template.md  spec-template.md  tasks-template.md
apps/desktop/: Cargo.toml  bundle.sh
apps/desktop/resources/: AppIcon.icns  Info.plist
apps/desktop/src/: main.rs
crates/swarmx-cli/: Cargo.toml
crates/swarmx-cli/src/: main.rs
crates/swarmx-core/: Cargo.toml
crates/swarmx-core/src/: agent.rs  edge.rs  hook.rs  lib.rs  mcp.rs  openai_types.rs  server.rs  settings.rs  swarm.rs  tool.rs  utils.rs
crates/swarmx-core/src/agent/: tests.rs
crates/swarmx-core/src/edge/: tests.rs
crates/swarmx-core/src/hook/: tests.rs
crates/swarmx-core/src/mcp/: tests.rs
crates/swarmx-core/src/server/: tests.rs
crates/swarmx-core/src/settings/: tests.rs
crates/swarmx-core/src/swarm/: tests.rs
crates/swarmx-core/src/tool/: tests.rs
crates/swarmx-core/src/utils/: tests.rs
crates/swarmx-ui/: Cargo.toml
crates/swarmx-ui/src/: app.rs  data.rs  environment.rs  harness.rs  instance.rs  lib.rs  persistence.rs  swr.rs  theme.rs  tokens.rs
crates/swarmx-ui/src/harness/: tests.rs
crates/swarmx-ui/src/persistence/: tests.rs
crates/swarmx-ui/src/swr/: tests.rs
crates/swarmx-ui/src/theme/: tests.rs
crates/swarmx-ui/src/tokens/: tests.rs
crates/swarmx-ui/src/view/: chat.rs  chat_message.rs  command_palette.rs  composer.rs  mod.rs  sidebar.rs  welcome.rs
crates/swarmx-ui/src/view/chat_message/: tests.rs
crates/swarmx-ui/src/view/composer/: tests.rs
crates/swarmx-ui/src/view/settings/: about.rs  agents.rs  appearance.rs  mod.rs
crates/swarmx-ui/src/view/settings/agents/: tests.rs
crates/swarmx-ui/src/view/sidebar/: tests.rs
docs/: agent-composer-research.md  agent-first-human-collaboration-product-design.md  claude-code-tool-parity.md  config-spec.toml  extensions-custom-agents.md  geepilot-platform-review.md  hooks.md  index.md  native-tool-compatibility.md  server.md
evals/inspect/: README.md  __init__.py  tasks.py  tasks_test.py
evals/inspect/datasets/: smoke.jsonl
evals/inspect/fixtures/: echo.swarm.json  missing-root.swarm.json
examples/: ai_scientist.py  ai_scientist.rs  hooks_example.py  hooks_example.rs
examples/basic/: agent_handoff.py  bare_minimum.py  context_variables.py  function_calling.py  simple_loop_no_helpers.py
hooks/: index.html
scripts/: publish-npm.mjs  rebuild-icon.py
search/: search_index.json
server/: index.html
specs/: desktop-ui-design-language.md
src/swarmx/: __init__.py  __main__.py  _settings.py  acp_server.py  agent.py  cli.py  clients.py  conversion.py  edge.py  hook.py  jsonpatch.py  jsonpointer.py  mcp_client.py  mcp_manager.py  mcp_server.py  messages.py  node.py  quota.py  server.py  swarm.py  tool.py  types.py  utils.py  version.py
swarm/: core.py  types.py
swarmx/: config.py  core.py  types.py  util.py
swarmx/repl/: __init__.py  repl.py
tests/: conftest.py  functions.py  hooks.py  mock_client.py  test_agent.py  test_agent_extended.py  test_agent_helpers.py  test_async.py  test_basic.py  test_cli.py  test_clients.py  test_conversion.py  test_core.py  test_dotenv_loading.py  test_graph.py  test_hooks.py  test_jsonpatch.py  test_jsonpointer.py  test_main.py  test_mcp_client.py  test_mcp_manager.py  test_mcp_server.py  test_messages.py  test_node.py  test_quota.py  test_resolve_edge_target.py  test_server_app.py  test_settings.py  test_swarm.py  test_swarm_routing.py  test_swarm_run.py  test_swarmx.py  test_tool_registry.py  test_tools.py  test_util.py  test_utils.py  test_validator.py  test_version.py  threads.jsonl
tests/threads/: agent.json  agent_run_with_tool_execution.json  agent_sequence_execution.json  conditional_edges.json  handoff.json  mcp_tool_call.json  simple_chain.json  swarm.json  swarm_run_with_max_turns.json
