[project]
name = "swarmx"
version = "0.7.0a2"
authors = [
    { name = "Tang Ziya", email = "tcztzy@gmail.Com" }
]
description = "A lightweight, stateless multi-agent orchestration framework."
readme = "README.md"
license = "MIT"
dependencies = [
    "common-expression-language>=0.5.1",
    "fastapi>=0.116.1",
    "jinja2>=3.1.6",
    "markdown-it-py[plugins]>=4.0.0",
    "mcp>=1.13.1",
    "mdformat>=0.7.22",
    "networkx>=3.5",
    "openai>=1.107.0",
    "pydantic-settings>=2.10.1",
    "pyyaml>=6.0.2",
    "typer>=0.17.4",
]
requires-python = ">=3.11"  # for asyncio.TaskGroup & except* syntax
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
    "Typing :: Typed",
]

[project.scripts]
swarmx = "swarmx:app"

[build-system]
requires = ["uv_build>=0.8.0,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    { include-group = "docs" },
    { include-group = "lint" },
    { include-group = "test" },
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.2",
    "mkdocs-material>=9.6.18",
    "mkdocstrings[python]>=0.30.0",
]
lint = [
    "ruff>=0.12.11",
]
test = [
    "mcp-server-time>=2025.8.4",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "tox>=4.30.1",
    "tox-uv>=1.28.0",
]

[tool.ruff.lint]
extend-select = ["D", "F", "I", "T20"]
ignore = [
    "D203",  # incorrect-blank-line-before-class
    "D213",  # multi-line-summary-second-line
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "D"
]
"examples/*.py" = ["T20"]

[tool.mypy]
plugins = ['pydantic.mypy']

[tool.pytest.ini_options]
addopts = ["--cov=swarmx"]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.coverage.report]
exclude_also = [
    "if __name__ == \"__main__\":",
    'case _( as .+)?:\n\s*assert_never\(.+\)',
]

[tool.tox]
requires = ["tox>=4", "tox-uv>=1"]
env_list = ["3.13", "3.12", "3.11"]

[tool.tox.env_run_base]
dependency_groups = ["test"]
commands = [["pytest", { replace = "posargs", default = ["tests"], extend = true }]]

[tool.uv.sources]
mdformat = { git = "https://github.com/hukkin/mdformat" }
