[project]
name = "swarmx"
version = "0.7.0a5"
authors = [
    { name = "Tang Ziya", email = "tcztzy@gmail.Com" }
]
description = "A lightweight, stateless multi-agent orchestration framework."
readme = "README.md"
license = "MIT"
dependencies = [
    "common-expression-language>=0.5.1",
    "fastapi>=0.119.0",
    "jinja2>=3.1.6",
    "jsonschema>=4.25.1",
    "markdown-it-py[plugins]>=4.0.0",
    "mcp>=1.17.0",
    "networkx>=3.5",
    "openai>=2.3.0",
    "pydantic-settings>=2.11.0",
    "pyyaml>=6.0.3",
    "typer>=0.19.2",
]
requires-python = ">=3.11"  # for asyncio.TaskGroup & except* syntax
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
    "Typing :: Typed",
]

[project.scripts]
swarmx = "swarmx:app"

[build-system]
requires = ["uv_build>=0.8.0,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    { include-group = "docs" },
    { include-group = "lint" },
    { include-group = "test" },
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.2",
    "mkdocs-material>=9.6.21",
    "mkdocstrings[python]>=0.30.1",
]
lint = [
    "ruff>=0.14.0",
]
test = [
    "mcp-server-time>=2025.9.25",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "tox>=4.31.0",
    "tox-uv>=1.29.0",
]

[tool.ruff.lint]
extend-select = ["D", "F", "I", "T20"]
ignore = [
    "D203",  # incorrect-blank-line-before-class
    "D213",  # multi-line-summary-second-line
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "D"
]
"examples/*.py" = ["T20"]

[tool.mypy]
plugins = ['pydantic.mypy']

[tool.pytest.ini_options]
addopts = ["--cov=swarmx"]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.coverage.report]
exclude_also = [
    "if __name__ == \"__main__\":",
    'case _( as .+)?:\n\s*assert_never\(.+\)',
]

[tool.tox]
requires = ["tox>=4", "tox-uv>=1"]
env_list = ["3.14", "3.13", "3.12", "3.11"]

[tool.tox.env_run_base]
dependency_groups = ["test"]
commands = [["pytest", { replace = "posargs", default = ["tests"], extend = true }]]
