[project]
name = "swarmx"
version = "1.0.0"
authors = [
    { name = "Tang Ziya", email = "tcztzy@gmail.Com" }
]
description = "A lightweight, stateless multi-agent orchestration framework."
readme = "README.md"
license = "MIT"
dependencies = [
    "common-expression-language>=0.5.3",
    "fastapi>=0.121.2",
    "jinja2>=3.1.6",
    "jsonschema>=4.25.1",
    "mcp>=1.21.2",
    "networkx>=3.5",
    "openai>=2.8.1",
    "pydantic-settings>=2.12.0",
    "tenacity>=9.1.2",
    "typer>=0.20.0",
]
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
    "Typing :: Typed",
]

[project.scripts]
swarmx = "swarmx:app"

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    { include-group = "docs" },
    { include-group = "lint" },
    { include-group = "test" },
    "pre-commit>=4.3.0",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.2",
    "mkdocs-material>=9.6.23",
    "mkdocstrings[python]>=0.30.1",
]
lint = [
    "ruff>=0.14.3",
]
test = [
    "mcp-server-time>=2025.9.25",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "tox>=4.32.0",
    "tox-uv>=1.29.0",
]

[tool.ruff.lint]
extend-select = ["D", "F", "I", "T20"]
ignore = [
    "D203",  # incorrect-blank-line-before-class
    "D213",  # multi-line-summary-second-line
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "D"
]
"examples/*.py" = ["T20"]

[tool.mypy]
plugins = ['pydantic.mypy']

[tool.pytest.ini_options]
addopts = ["--cov=swarmx"]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.coverage.report]
exclude_also = [
    "if __name__ == \"__main__\":",
    'case _( as .+)?:\n\s*assert_never\(.+\)',
]

[tool.tox]
requires = ["tox>=4", "tox-uv>=1"]
env_list = ["3.14", "3.13", "3.12"]

[tool.tox.env_run_base]
dependency_groups = ["test"]
commands = [["pytest", { replace = "posargs", default = ["tests"], extend = true }]]
