[package]
name = "swarmx-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "CLI for SwarmX multi-agent orchestration framework"

[[bin]]
name = "swarmx"
path = "src/main.rs"

[dependencies]
swarmx-core = { path = "../swarmx-core" }
clap = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
