[package]
name = "swarmx-ui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "SwarmX UI library (iced + iced-shadcn)"

[features]
hot-reload = ["iced/hot", "iced/debug"]

[dependencies]
iced = { version = "0.14", features = ["tokio", "advanced", "tiny-skia", "lazy", "image", "svg", "markdown"] }
iced-shadcn = "0.5"
lucide-icons = { version = "0.575", features = ["iced"] }
swarmx-core = { path = "../swarmx-core" }
tokio = { workspace = true, features = ["process", "rt-multi-thread", "sync"] }
rfd = "0.15"
serde = { workspace = true }
serde_json.workspace = true
agent-client-protocol = "0.11.1"
agent-client-protocol-tokio = "0.11.1"
tokio-util = { version = "0.7", features = ["compat"] }
chrono = "0.4"
dirs-next = "2"
keyring = "3"
